tests/objsingleton/objsingleton.exp
Error -------------------------------------------------------------------------------------------- objsingleton.js:19:42

Cannot call `onAction` with object literal bound to `pattern` because property `Action3` is missing in object
literal [1] but exists in object type [2].

   objsingleton.js:19:42
                                                v
   19| const result2: number = onAction(action, {
   20|   Action1: () => 0,
   21|   Action2: () => 1
   22| });
       ^ [1]

References:
   objsingleton.js:6:19
    6|   pattern: $Exact<$ObjSingleton<T, () => Result>>
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 1 error
